@@ -268,8 +268,6 @@ snsd_node *snsd_find_node_by_record(snsd_node *snd, u_int record[MAX_IP_INT]);
 int snsd_count_nodes(snsd_service *head);
 snsd_node *snsd_add_node(snsd_node **head, u_short *counter, 
 			 u_short max_records, u_int record[MAX_IP_INT]);
-snsd_node *snsd_add_first_node(snsd_node **head, u_short *counter,
-				u_short max_records, u_int record[MAX_IP_INT]);
 snsd_node *snsd_add_first_mainip(snsd_service **head, u_short *counter,
 				u_short max_records, u_int record[MAX_IP_INT]);
 void snsd_service_llist_del(snsd_service **head);
